Assign1/error.log
<!DOCTYPE html> <html><head><title>Haskell ErrorLog</title><style>.Errorbody{background-color:#CCCCCC}h3{text-align:center;text-decoration:underline}</style></head>
<body><div><pre>

</pre></div><h3> rand.hs </h3><div class = "Errorbody"><pre>
rand.hs:1:13: error: parse error on input `->'
  |
1 | rand = Long -> Float
  |             ^^
</pre></div></body></html>
